Fix broken page on firefox

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -609,10 +609,6 @@ div.error {
 	}
 }
 
-.container {
-	min-height: 100%;
-}
-
 /* stack */
 a.stack {
 	color: $stackColor;
